clang/test/BSC/Positive/Method/Struct/struct_typedef_static_function_call/struct_typedef_static_function_call.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// expected-no-diagnostics

typedef struct _queue {
} queue;

void queue::empty() {
}

int main() {
    queue::empty();
    return 0;
}