clang/test/BSC/Negative/Method/Enum/enum_instance_function_multi_declaration_2/enum_instance_function_multi_declaration_2.cbs
// RUN: %clang_cc1 -verify %s
#include "enum_header_1.hbs"
#include "enum_header_2.hbs"


int main() {
    return 0;
}